fixed 4th row of dots getting cut off in our-vision animation

--- a/css/vision-animation.scss
+++ b/css/vision-animation.scss
@@ -11,6 +11,7 @@
   @include u-width(4);
   @include u-height(4);
   @include u-margin('1px');
+  @include u-padding('1px');
 }
 
 .home-vision__row {
